--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,7 +30,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  my_fin_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+ my_fin_project:
+   staging:
+     materialized: view
+   intermediate:
+     materialized: incremental
+   marts:
+     materialized: table
