--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_fin_project'
+name: 'my_fin_project' 
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
@@ -37,3 +37,6 @@ models:
      materialized: incremental
    marts:
      materialized: table
+
+vars:
+  dbt_date: 
