--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,7 +40,7 @@ models:
      +materialized: view
    intermediate:
      +schema: intermediate
-     +materialized: incremental
+     +materialized: table
    marts:
      +schema: marts
      +materialized: table
@@ -49,7 +49,7 @@ vars:
   credit_rules:
     rule_1:
       category: Investment
-      keywords: ["SO TIET KIEM","STK", "VEFO", "VIBF", "NTTK 0001213823", "SJC", "VEFON003108348"]
+      keywords: ["SO TIET KIEM","STK", "VEFO", "VIBF", "NTTK 0001213823", "SJC", "000131823"]
     rule_2:
       category: Cashout
       keywords: ["RUT TIEN", "RUT TIEN"]
@@ -86,6 +86,9 @@ vars:
     rule_13:
       category: House_improvement
       keywords: ["LE VAN DUNG", "BUI THI TUOI", "CAO THI THU THUY"]
+    rule_14:
+      category: Wedding_spending
+      keywords: ["WEDDING", "DAM CUOI"]
   debit_rules:
     rule_1:
       category: Salary
@@ -95,23 +98,26 @@ vars:
       keywords: ["PHUNG NGUYEN QUOC HUY", "TIET KIEM HUY"]
     rule_3:
       category: Investment
-      keywords: ["000131823", "GHI CO LAI TIEN GUI", "TIET KIEM", "VEFO", "VIBF","VEFON003108348"]
+      keywords: ["SO TIET KIEM","STK", "VEFO", "VIBF", "NTTK 0001213823", "SJC", "000131823"] 
     rule_4:
       category: Borrow
       keywords: ["BUI THI TUOI", "LE VAN DUNG"]
     rule_5:
       category: Refund
       keywords: ["HOAN", "THUE"]
+    rule_6:
+      category: Investment_interest
+      keywords: ["LAI TIEN GUI"]
   investment_rules:
     rule_1:
       category: Bank_book
-      keywords: ["SO TIET KIEM", "LAI TIEN GUI", "STK"]
+      keywords: ["SO TIET KIEM", "STK"]
     rule_2:
       category: Funding
-      keywords: ["VEFO", "VIBF", "VEFON003108348"]
+      keywords: ["VEFO", "VIBF"]
     rule_3:
       category: Stock
-      keywords: ["NTTK 0001213823"]
+      keywords: ["NTTK 0001213823", "000131823"]
     rule_4:
       category: Gold
       keywords: ["SJC"]
